name:                msgpack-rpc
version:             0.11
synopsis:            A MessagePack-RPC Implementation
description:         A MessagePack-RPC Implementation <http://msgpack.org/>
homepage:            http://msgpack.org/
license:             BSD3
license-file:        LICENSE
author:              Hideyuki Tanaka
maintainer:          Hideyuki Tanaka <tanaka.hideyuki@gmail.com>
copyright:           (c) 2010-2012, Hideyuki Tanaka
category:            Network
stability:           Experimental
cabal-version:       >=1.8
build-type:          Simple

source-repository head
  type:              git
  location:          git://github.com/msgpack/msgpack-haskell.git

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag prof
    Description:   Turn on profiling settings
    Default:       False

library
  build-depends:     base               >= 4.5
                   , bytestring         >= 0.9
                   , text               >= 0.11
                   , network            >= 2.2
                   , random             == 1.*
                   , mtl                >= 2.1
                   , conduit            >= 0.5
                   , conduit-extra
                   , msgpack            >= 0.7
                   , exceptions

  exposed-modules:   Network.MessagePackRpc.Server
                     Network.MessagePackRpc.Client
                     Network.MessagePackRpc.Error
                     Network.MessagePackRpc.Types

  Ghc-options:      -Wall

  if flag(dev)
      cpp-options:   -DDEVELOPMENT
      ghc-options:   -O0
  else
      ghc-options:   -O

  if flag(prof)
      ghc-options:   -fprof-auto

test-suite msgpack-rpc-test
  type:              exitcode-stdio-1.0
  hs-source-dirs:    dist
  main-is:           ../test.hs

  build-depends:     base
                   , mtl
                   , network
                   , async >= 2.0
                   , hspec >= 1.3
                   , msgpack-rpc
